test/files/neg/t6263.check
t6263.scala:5: error: type mismatch;
 found   : A.this.c.type (with underlying type C)
 required: AnyRef
  type t = c.type
           ^
one error found
